discussion/kv_engine/155349/155349_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43677: Add PCH Object Library

Add an object library containing a pre-compiled header that includes
headers commonly used throughout the codebase. This commit is a
proof of concept that use pre-compiled headers in various targets
throughout the code base.

Before:

Analyzing build trace from 'noOptimize.bin'...
**** Time summary:
Compilation (1065 times):
  Parsing (frontend):         3093.3 s
  Codegen & opts (backend):    832.9 s

After:

  Analyzing build trace from 'initial.bin'...
**** Time summary:
Compilation (1073 times):
  Parsing (frontend):         2847.3 s
  Codegen & opts (backend):    826.4 s

Change-Id: I182fa5d0058849e02ff8d473e8477aa51d5d999f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-10 09:00:36.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 09:00:43.000000000
Message: 
Patch Set 8:

(5 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 09:01:09.000000000
Message: 
Patch Set 8:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-10 09:04:37.000000000
Message: 
Patch Set 8: Code-Review+2

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-10 09:46:20.000000000
Message: 
Patch Set 8:

(2 comments)
Line:1, precompiled_headers.cc -> ditto

Line:1, precompiled_headers.h -> Do we need these headers anymore? (and should it be c-basic-offset in a C++ file?)

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 09:56:23.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9716/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9716/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9716/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8312/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36678/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/251/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31350/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11710/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11291/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19295/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10364/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 10:51:39.000000000
Message: 
Patch Set 8:

(1 comment)
Line:1, precompiled_headers.h -> No, removed

----------------------------------------------------------------------------------------------------------------------
